Fixing Overflow X bug

--- a/style.css
+++ b/style.css
@@ -190,6 +190,7 @@ body {
   body {
     background: url("./assets/alexander-popov-R25Q-pAUeY8-unsplash.jpg")
       no-repeat 30% -15%;
+    overflow-x: hidden;  
   }
 
   .main-container {
